--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^3.7.1"
+  },
+  "dependencies": {
+    "axios": "^0.17.0"
   }
 }
